--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -300,7 +300,7 @@
   }
 
   .navbar-cta {
-    display: none;
+    display: none !important;
   }
 
   .navbar-hamburger {
